--- a/boot.properties
+++ b/boot.properties
@@ -1,4 +1,5 @@
 #https://github.com/boot-clj/boot
 #Sun Jun 14 16:48:38 JST 2015
-BOOT_CLOJURE_VERSION=1.7.0
-BOOT_VERSION=2.4.2
+BOOT_CLOJURE_VERSION=1.8.0
+BOOT_VERSION=2.5.5
+BOOT_EMIT_TARGET=no
